--- a/vercel.json
+++ b/vercel.json
@@ -2,23 +2,24 @@
     "version": 2,
     "builds": [
         {
-            "src": "/src/main.ts",
-            "use": "@vercel/node",
-            "config": {
-                "maxLambdaSize": "50mb"
-            }
+            "src": "src/main.ts",
+            "use": "@vercel/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/src/main.ts",
+            "dest": "src/main.ts",
             "methods": [
                 "GET",
                 "POST",
                 "PUT",
+                "PATCH",
+                "OPTIONS",
                 "DELETE",
-                "PATCH"
+                "HEAD",
+                "CONNECT",
+                "TRACE"
             ]
         }
     ]
